--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=qrvet
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=dpg-cc3t1uhgp3jqnl0q30k0-a.oregon-postgres.render.com
+DB_PORT=5432
+DB_DATABASE=bdintegrador2
+DB_USERNAME=grupo1
+DB_PASSWORD=qD6ucqIZyjkodlbmux5TBPzxZgaoZv21
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
